# sentinel-mcp-gateway

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  add-mcp.sh  docker-compose.override.yml.example  docker-compose.yml  run-sentinel.sh  sentinel-docker.toml  sentinel.toml  sentinel.toml.example
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-foundation-config/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  1-RESEARCH.md
.planning/phases/02-mcp-protocol-layer/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-http-backend-routing/: 03-01-SUMMARY.md  03-02-PLAN.md  3-UAT.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: CONTEXTFORGE-GATEWAY.md  CURRENT-INFRASTRUCTURE.md  DEPLOYMENT.md  MCP-TOPOLOGY.md  OPENCLAW.md  RUST-WRAPPER-ANALYSIS.md  WHITEPAPER-REQUIREMENTS.md
docs/plans/: 2026-02-22-phase12-network-hardening-design.md  2026-02-22-phase12-network-hardening.md  2026-02-23-public-readiness-design.md  2026-02-23-public-readiness-plan.md
migrations/: 001_create_audit_log.sql
scripts/: setup.sh
sidecars/: Dockerfile.mcp-sqlite  Dockerfile.n8n
src/: cli.rs  gateway.rs  lib.rs  logging.rs  main.rs  ratelimit.rs
src/audit/: db.rs  mod.rs  writer.rs
src/auth/: jwt.rs  rbac.rs
src/backend/: error.rs  http.rs  mod.rs  retry.rs  sse.rs  stdio.rs
src/catalog/: mod.rs
src/config/: hot.rs  mod.rs  secrets.rs  types.rs
src/health/: checker.rs  circuit_breaker.rs  mod.rs  server.rs
src/metrics/: mod.rs
src/protocol/: id_remapper.rs  jsonrpc.rs  mcp.rs  mod.rs
src/transport/: stdio.rs
src/validation/: mod.rs
tests/: auth_test.rs  backend_test.rs  catalog_test.rs  circuit_breaker_test.rs  config_test.rs  gateway_integration_test.rs  health_integration_test.rs  id_remap_test.rs  mcp_lifecycle_test.rs  stdio_integration.rs
(+68 files in other folders)
