[package]
name = "sentinel-gateway"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
mimalloc = { version = "0.1", default-features = false }
dotenvy = "0.15"
rmcp = { version = "=0.16.0", default-features = false, features = ["server"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
