[package]
name = "sentinel-gateway"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
mimalloc = { version = "0.1", default-features = false }
dotenvy = "0.15"
rmcp = { version = "=0.16.0", default-features = false, features = ["server"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
bytes = "1"
futures = "0.3"
rand = "0.9"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
